Created the util PersonFinderUtil